@@ -43,7 +43,10 @@
  **/
 TIEXPORT3 CalcFeatures TICALL ticalcs_calc_features(CalcHandle* handle)
 {
-	const CalcFncts *calc = handle->calc;
+	const CalcFncts *calc;
+	
+	if(handle == NULL) return ERR_INVALID_HANDLE;
+	calc = handle->calc;
 
 	return calc->features;
 }
@@ -58,8 +61,11 @@ TIEXPORT3 CalcFeatures TICALL ticalcs_calc_features(CalcHandle* handle)
  **/
 TIEXPORT3 int TICALL ticalcs_calc_isready(CalcHandle* handle)
 {
-	const CalcFncts *calc = handle->calc;
+	const CalcFncts *calc;
 	int ret = 0;
+
+	if(handle == NULL) return ERR_INVALID_HANDLE;
+	calc = handle->calc;
 
 	if(!handle->attached)
 		return ERR_NO_CABLE;
@@ -90,8 +96,11 @@ TIEXPORT3 int TICALL ticalcs_calc_isready(CalcHandle* handle)
  **/
 TIEXPORT3 int TICALL ticalcs_calc_send_key(CalcHandle* handle, uint16_t key)
 {
-	const CalcFncts *calc = handle->calc;
+	const CalcFncts *calc;
 	int ret = 0;
+
+	if(handle == NULL) return ERR_INVALID_HANDLE;
+	calc = handle->calc;
 
 	if(!handle->attached)
 		return ERR_NO_CABLE;
@@ -124,8 +133,11 @@ TIEXPORT3 int TICALL ticalcs_calc_send_key(CalcHandle* handle, uint16_t key)
 TIEXPORT3 int TICALL ticalcs_calc_recv_screen(CalcHandle* handle, CalcScreenCoord* sc,
 												 uint8_t** bitmap)
 {
-	const CalcFncts *calc = handle->calc;
+	const CalcFncts *calc;
 	int ret = 0;
+
+	if(handle == NULL) return ERR_INVALID_HANDLE;
+	calc = handle->calc;
 
 	if(!handle->attached)
 		return ERR_NO_CABLE;
@@ -158,9 +170,12 @@ TIEXPORT3 int TICALL ticalcs_calc_recv_screen(CalcHandle* handle, CalcScreenCoor
 TIEXPORT3 int TICALL ticalcs_calc_get_dirlist(CalcHandle* handle, 
 											 TNode** vars, TNode **apps)
 {
-	const CalcFncts *calc = handle->calc;
+	const CalcFncts *calc;
 	int ret = 0;
 	TreeInfo *ti;
+
+	if(handle == NULL) return ERR_INVALID_HANDLE;
+	calc = handle->calc;
 
 	if(!handle->attached)
 		return ERR_NO_CABLE;
@@ -200,8 +215,11 @@ TIEXPORT3 int TICALL ticalcs_calc_get_dirlist(CalcHandle* handle,
  **/
 TIEXPORT3 int TICALL ticalcs_calc_get_memfree(CalcHandle* handle, uint32_t* ram, uint32_t *flash)
 {
-	const CalcFncts *calc = handle->calc;
+	const CalcFncts *calc;
 	int ret = 0;
+
+	if(handle == NULL) return ERR_INVALID_HANDLE;
+	calc = handle->calc;
 
 	if(!handle->attached)
 		return ERR_NO_CABLE;
@@ -232,8 +250,11 @@ TIEXPORT3 int TICALL ticalcs_calc_get_memfree(CalcHandle* handle, uint32_t* ram,
  **/
 TIEXPORT3 int TICALL ticalcs_calc_recv_backup(CalcHandle* handle, BackupContent* content)
 {
-	const CalcFncts *calc = handle->calc;
+	const CalcFncts *calc;
 	int ret = 0;
+
+	if(handle == NULL) return ERR_INVALID_HANDLE;
+	calc = handle->calc;
 
 	if(!handle->attached)
 		return ERR_NO_CABLE;
@@ -264,8 +285,11 @@ TIEXPORT3 int TICALL ticalcs_calc_recv_backup(CalcHandle* handle, BackupContent*
  **/
 TIEXPORT3 int TICALL ticalcs_calc_send_backup(CalcHandle* handle, BackupContent* content)
 {
-	const CalcFncts *calc = handle->calc;
+	const CalcFncts *calc;
 	int ret = 0;
+
+	if(handle == NULL) return ERR_INVALID_HANDLE;
+	calc = handle->calc;
 
 	if(!handle->attached)
 		return ERR_NO_CABLE;
@@ -298,8 +322,11 @@ TIEXPORT3 int TICALL ticalcs_calc_send_backup(CalcHandle* handle, BackupContent*
 TIEXPORT3 int TICALL ticalcs_calc_send_var(CalcHandle* handle, CalcMode mode, 
 										  FileContent* content)
 {
-	const CalcFncts *calc = handle->calc;
+	const CalcFncts *calc;
 	int ret = 0;
+
+	if(handle == NULL) return ERR_INVALID_HANDLE;
+	calc = handle->calc;
 
 	if(!handle->attached)
 		return ERR_NO_CABLE;
@@ -333,8 +360,11 @@ TIEXPORT3 int TICALL ticalcs_calc_send_var(CalcHandle* handle, CalcMode mode,
 TIEXPORT3 int TICALL ticalcs_calc_recv_var(CalcHandle* handle, CalcMode mode, 
 											FileContent* content, VarRequest* vr)
 {
-	const CalcFncts *calc = handle->calc;
+	const CalcFncts *calc;
 	int ret = 0;
+
+	if(handle == NULL) return ERR_INVALID_HANDLE;
+	calc = handle->calc;
 
 	if(!handle->attached)
 		return ERR_NO_CABLE;
@@ -367,8 +397,11 @@ TIEXPORT3 int TICALL ticalcs_calc_recv_var(CalcHandle* handle, CalcMode mode,
 TIEXPORT3 int TICALL ticalcs_calc_send_var_ns(CalcHandle* handle, CalcMode mode, 
 											 FileContent* content)
 {
-	const CalcFncts *calc = handle->calc;
+	const CalcFncts *calc;
 	int ret = 0;
+
+	if(handle == NULL) return ERR_INVALID_HANDLE;
+	calc = handle->calc;
 
 	if(!handle->attached)
 		return ERR_NO_CABLE;
@@ -402,8 +435,11 @@ TIEXPORT3 int TICALL ticalcs_calc_send_var_ns(CalcHandle* handle, CalcMode mode,
 TIEXPORT3 int TICALL ticalcs_calc_recv_var_ns(CalcHandle* handle, CalcMode mode, 
 											 FileContent* content, VarEntry** var)
 {
-	const CalcFncts *calc = handle->calc;
+	const CalcFncts *calc;
 	int ret = 0;
+
+	if(handle == NULL) return ERR_INVALID_HANDLE;
+	calc = handle->calc;
 
 	if(!handle->attached)
 		return ERR_NO_CABLE;
@@ -434,8 +470,11 @@ TIEXPORT3 int TICALL ticalcs_calc_recv_var_ns(CalcHandle* handle, CalcMode mode,
  **/
 TIEXPORT3 int TICALL ticalcs_calc_send_app(CalcHandle* handle, FlashContent* content)
 {
-	const CalcFncts *calc = handle->calc;
+	const CalcFncts *calc;
 	int ret = 0;
+
+	if(handle == NULL) return ERR_INVALID_HANDLE;
+	calc = handle->calc;
 
 	if(!handle->attached)
 		return ERR_NO_CABLE;
@@ -468,8 +507,11 @@ TIEXPORT3 int TICALL ticalcs_calc_send_app(CalcHandle* handle, FlashContent* con
 TIEXPORT3 int TICALL ticalcs_calc_recv_app(CalcHandle* handle, FlashContent* content, 
 											VarRequest* var)
 {
-	const CalcFncts *calc = handle->calc;
+	const CalcFncts *calc;
 	int ret = 0;
+
+	if(handle == NULL) return ERR_INVALID_HANDLE;
+	calc = handle->calc;
 
 	if(!handle->attached)
 		return ERR_NO_CABLE;
@@ -500,8 +542,11 @@ TIEXPORT3 int TICALL ticalcs_calc_recv_app(CalcHandle* handle, FlashContent* con
  **/
 TIEXPORT3 int TICALL ticalcs_calc_send_os(CalcHandle* handle, FlashContent* content)
 {
-	const CalcFncts *calc = handle->calc;
+	const CalcFncts *calc;
 	int ret = 0;
+
+	if(handle == NULL) return ERR_INVALID_HANDLE;
+	calc = handle->calc;
 
 	if(!handle->attached)
 		return ERR_NO_CABLE;
@@ -532,8 +577,11 @@ TIEXPORT3 int TICALL ticalcs_calc_send_os(CalcHandle* handle, FlashContent* cont
  **/
 TIEXPORT3 int TICALL ticalcs_calc_recv_idlist(CalcHandle* handle, uint8_t* idlist)
 {
-	const CalcFncts *calc = handle->calc;
+	const CalcFncts *calc;
 	int ret = 0;
+
+	if(handle == NULL) return ERR_INVALID_HANDLE;
+	calc = handle->calc;
 
 	if(!handle->attached)
 		return ERR_NO_CABLE;
@@ -563,8 +611,11 @@ TIEXPORT3 int TICALL ticalcs_calc_recv_idlist(CalcHandle* handle, uint8_t* idlis
  **/
 TIEXPORT3 int TICALL ticalcs_calc_dump_rom_1(CalcHandle* handle)
 {
-	const CalcFncts *calc = handle->calc;
+	const CalcFncts *calc;
 	int ret = 0;
+
+	if(handle == NULL) return ERR_INVALID_HANDLE;
+	calc = handle->calc;
 
 	if(!handle->attached)
 		return ERR_NO_CABLE;
@@ -597,8 +648,11 @@ TIEXPORT3 int TICALL ticalcs_calc_dump_rom_1(CalcHandle* handle)
 TIEXPORT3 int TICALL ticalcs_calc_dump_rom_2(CalcHandle* handle, CalcDumpSize size, 
 										  const char *filename)
 {
-	const CalcFncts *calc = handle->calc;
+	const CalcFncts *calc;
 	int ret = 0;
+
+	if(handle == NULL) return ERR_INVALID_HANDLE;
+	calc = handle->calc;
 
 	if(!handle->attached)
 		return ERR_NO_CABLE;
@@ -648,8 +702,11 @@ TIEXPORT3 int TICALL ticalcs_calc_dump_rom(CalcHandle* handle, CalcDumpSize size
  **/
 TIEXPORT3 int TICALL ticalcs_calc_set_clock(CalcHandle* handle, CalcClock* clock)
 {
-	const CalcFncts *calc = handle->calc;
+	const CalcFncts *calc;
 	int ret = 0;
+
+	if(handle == NULL) return ERR_INVALID_HANDLE;
+	calc = handle->calc;
 
 	if(!handle->attached)
 		return ERR_NO_CABLE;
@@ -680,8 +737,11 @@ TIEXPORT3 int TICALL ticalcs_calc_set_clock(CalcHandle* handle, CalcClock* clock
  **/
 TIEXPORT3 int TICALL ticalcs_calc_get_clock(CalcHandle* handle, CalcClock* clock)
 {
-	const CalcFncts *calc = handle->calc;
+	const CalcFncts *calc;
 	int ret = 0;
+
+	if(handle == NULL) return ERR_INVALID_HANDLE;
+	calc = handle->calc;
 
 	if(!handle->attached)
 		return ERR_NO_CABLE;
@@ -712,8 +772,11 @@ TIEXPORT3 int TICALL ticalcs_calc_get_clock(CalcHandle* handle, CalcClock* clock
  **/
 TIEXPORT3 int TICALL ticalcs_calc_send_cert(CalcHandle* handle, FlashContent* content)
 {
-	const CalcFncts *calc = handle->calc;
+	const CalcFncts *calc;
 	int ret = 0;
+
+	if(handle == NULL) return ERR_INVALID_HANDLE;
+	calc = handle->calc;
 
 	if(!handle->attached)
 		return ERR_NO_CABLE;
@@ -744,8 +807,11 @@ TIEXPORT3 int TICALL ticalcs_calc_send_cert(CalcHandle* handle, FlashContent* co
  **/
 TIEXPORT3 int TICALL ticalcs_calc_recv_cert(CalcHandle* handle, FlashContent* content)
 {
-	const CalcFncts *calc = handle->calc;
+	const CalcFncts *calc;
 	int ret = 0;
+
+	if(handle == NULL) return ERR_INVALID_HANDLE;
+	calc = handle->calc;
 
 	if(!handle->attached)
 		return ERR_NO_CABLE;
@@ -1057,8 +1123,11 @@ TIEXPORT3 int TICALL ticalcs_calc_recv_app2(CalcHandle* handle, const char* file
  **/
 TIEXPORT3 int TICALL ticalcs_calc_new_fld(CalcHandle* handle, VarRequest* vr)
 {
-    const CalcFncts *calc = handle->calc;
+    const CalcFncts *calc;
 	int ret;
+
+	if(handle == NULL) return ERR_INVALID_HANDLE;
+	calc = handle->calc;
 
 	if(!handle->attached)
 		return ERR_NO_CABLE;
@@ -1088,8 +1157,11 @@ TIEXPORT3 int TICALL ticalcs_calc_new_fld(CalcHandle* handle, VarRequest* vr)
  **/
 TIEXPORT3 int TICALL ticalcs_calc_del_var(CalcHandle* handle, VarRequest* vr)
 {
-	const CalcFncts *calc = handle->calc;
+	const CalcFncts *calc;
 	int ret;
+
+	if(handle == NULL) return ERR_INVALID_HANDLE;
+	calc = handle->calc;
 
 	if(!handle->attached)
 		return ERR_NO_CABLE;
@@ -1110,8 +1182,11 @@ TIEXPORT3 int TICALL ticalcs_calc_del_var(CalcHandle* handle, VarRequest* vr)
 
 TIEXPORT3 int TICALL ticalcs_calc_get_version(CalcHandle* handle, CalcInfos* infos)
 {
-	const CalcFncts *calc = handle->calc;
+	const CalcFncts *calc;
 	int ret;
+
+	if(handle == NULL) return ERR_INVALID_HANDLE;
+	calc = handle->calc;
 
 	//if(!handle->attached)
 	//	return ERR_NO_CABLE;
