@@ -8,6 +8,7 @@ Log:
 	- changed TIEXPORT into TIEXPORT3
 	- B. Moody fix: replaced all snprintf by g_snprintf (truncate OS version under Linux)
 	- 68k ROM dumpers: only dump 4 MB on HW4 (same as HW3)
+	- check handle to avoid NULL dereference
 
 - 17/09/2006, tagged as version 1.0.0: roms
 	- added support for TILIBS_DEPRECATED (exports symbols which have been tagged as deprecated)
